improv: Allow ignoring of Forge installer exit via ServerStarterJar custom SecurityManager